--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 body {
-  max-width: 650px;
-  margin: 40px auto;
   padding: 0 10px;
   font: 16px/1.5 monospace;
   color: #444
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   line-height: 1.2
 }
 
@@ -30,15 +26,4 @@ h3 {
 hr {
   border: none;
   border-top: 2px dotted #444;
-}
-
-@media print {
-  body {
-    max-width: 100%;
-    margin-top: 25mm;
-    margin-bottom: 25mm;
-    margin-left: 20mm;
-    margin-right: 20mm;
-    font: 16px/1.5 monospace;
-  }
 }
